--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-modal": "^3.16.1",
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
+    "reduce-reducers": "^1.0.4",
     "sass": "^1.57.1",
     "uniqid": "^5.4.0",
     "web-vitals": "^2.1.4"
