--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "prepare": "husky install",
+    "format": "yarn prettier --write './**'"
   },
   "eslintConfig": {
     "extends": [
@@ -43,7 +45,11 @@
   },
   "devDependencies": {
     "eslint": "^8.30.0",
-    "eslint-plugin-react": "^7.31.11"
+    "eslint-config-prettier": "^8.7.0",
+    "eslint-plugin-react": "^7.31.11",
+    "husky": "^8.0.0",
+    "prettier": "2.8.4",
+    "pretty-quick": "^3.1.3"
   },
   "main": "index.js",
   "repository": "git@github.com:antonin-stephany/waven-builder.git",
