--- a/package.json
+++ b/package.json
@@ -58,5 +58,5 @@
   "repository": "git@github.com:antonin-stephany/waven-builder.git",
   "author": "Antonin Stephany <stephany.antonin@gmail.com>",
   "license": "MIT",
-  "homepage": "https://antonin-stephany.github.io/waven-builder"
+  "homepage": "https://antonin-stephany.github.io"
 }
